--- a/refs.bib
+++ b/refs.bib
@@ -123,3 +123,12 @@
   year={2001},
   publisher={Elsevier}
 }
+
+@inproceedings{ester1996density,
+  title={A density-based algorithm for discovering clusters in large spatial databases with noise.},
+  author={Ester, Martin and Kriegel, Hans-Peter and Sander, J{\"o}rg and Xu, Xiaowei},
+  booktitle={Kdd},
+  volume={96},
+  pages={226--231},
+  year={1996}
+}
